--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.55.0",
+    "@tanstack/react-query-devtools": "^5.62.3",
     "axios": "^1.7.7",
     "date-fns": "^3.6.0",
     "linkedin-clone": "file:..",
     "lucide-react": "^0.439.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.16.3",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
