--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"type": "module",
 	"license": "ISC",
 	"dependencies": {
+		"axios": "^1.7.9",
 		"bcryptjs": "^2.4.3",
 		"cloudinary": "^2.4.0",
 		"cookie-parser": "^1.4.6",
@@ -21,6 +22,8 @@
 		"express": "^4.19.2",
 		"jsonwebtoken": "^9.0.2",
 		"mailtrap": "^3.4.0",
+		"moment": "^2.30.1",
+		"moment-timezone": "^0.5.46",
 		"mongoose": "^8.6.1"
 	},
 	"devDependencies": {
