--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,22 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Performance Testing Reports
+lighthouse-reports/
+frontend/lighthouse-reports/
+frontend/test-results/
+frontend/playwright-report/
+frontend/coverage/
+
+# Playwright
+test-results/
+playwright-report/
+playwright/.cache/
+
+# Test outputs
+*.html.report/
+*.json.report/
+performance-*.json
+lighthouse-*.html
+lighthouse-*.json
