--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,14 @@
     "test:coverage:open": "jest --coverage && npx http-server coverage/lcov-report -o",
     "test:ci": "jest --coverage --watchAll=false",
     "test:update-snapshots": "jest --updateSnapshot",
-    "test:update-snapshots:watch": "jest --updateSnapshot --watch"
+    "test:update-snapshots:watch": "jest --updateSnapshot --watch",
+    "test:perf": "playwright test tests/performance/ --config=tests/performance/playwright.config.js",
+    "test:perf:headed": "playwright test tests/performance/ --config=tests/performance/playwright.config.js --headed",
+    "test:perf:ci": "playwright test tests/performance/ --config=tests/performance/playwright.config.js --reporter=junit",
+    "test:lighthouse": "node tests/performance/lighthouse-with-playwright.js",
+    "test:lighthouse:ci": "node tests/performance/lighthouse-with-playwright.js --ci",
+    "playwright:install": "playwright install",
+    "open:perf-reports": "npx http-server lighthouse-reports -o"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.55.0",
@@ -37,6 +44,7 @@
     "@babel/preset-env": "^7.28.0",
     "@babel/preset-react": "^7.27.1",
     "@eslint/js": "^9.9.0",
+    "@playwright/test": "^1.48.2",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -54,6 +62,8 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
+    "lighthouse": "^12.2.1",
+    "playwright": "^1.48.2",
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.10",
     "vite": "^5.4.1"
