--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "lint:check": "eslint . --max-warnings 0",
     "preview": "vite preview",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -19,6 +21,10 @@
     "test:perf": "playwright test tests/performance/ --config=tests/performance/playwright.config.js",
     "test:perf:headed": "playwright test tests/performance/ --config=tests/performance/playwright.config.js --headed",
     "test:perf:ci": "playwright test tests/performance/ --config=tests/performance/playwright.config.js --reporter=junit",
+    "test:memory-leaks": "playwright test tests/performance/memory-leak.spec.js --config=tests/performance/playwright.config.js --project=chromium-memory-leak-detection",
+    "test:memory-leaks:headed": "playwright test tests/performance/memory-leak.spec.js --config=tests/performance/playwright.config.js --project=chromium-memory-leak-detection --headed",
+    "test:memory-leaks:ci": "playwright test tests/performance/memory-leak.spec.js --config=tests/performance/playwright.config.js --project=chromium-memory-leak-detection --reporter=junit",
+    "test:all-performance": "playwright test tests/performance/ --config=tests/performance/playwright.config.js --project=chromium-performance && npm run test:memory-leaks",
     "test:lighthouse": "node tests/performance/lighthouse-with-playwright.js",
     "test:lighthouse:ci": "node tests/performance/lighthouse-with-playwright.js --ci",
     "playwright:install": "playwright install",
@@ -55,6 +61,8 @@
     "babel-jest": "^30.0.5",
     "daisyui": "^4.12.10",
     "eslint": "^9.9.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
