--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
 	"scripts": {
 		"dev": "nodemon backend/server.js",
 		"start": "node backend/server.js",
-		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
+		"test": "npm run test:backend && npm run test:frontend",
+		"test:backend": "npm test --prefix backend",
+		"test:frontend": "npm test --prefix frontend",
+		"test:backend:watch": "npm run test:watch --prefix backend",
+		"test:frontend:watch": "npm run test:watch --prefix frontend",
+		"test:backend:coverage": "npm run test:coverage --prefix backend",
+		"test:frontend:coverage": "npm run test:coverage --prefix frontend",
+		"test:coverage": "npm run test:backend:coverage && npm run test:frontend:coverage"
 	},
 	"keywords": [],
 	"author": "",
