--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,13 @@
     "test:ci": "jest --coverage --watchAll=false",
     "test:update-snapshots": "jest --updateSnapshot",
     "test:update-snapshots:watch": "jest --updateSnapshot --watch",
+    "test:e2e": "playwright test",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report",
+    "test:e2e:login": "playwright test tests/e2e/auth/",
+    "test:e2e:ci": "playwright test --reporter=junit",
     "test:perf": "playwright test tests/performance/ --config=tests/performance/playwright.config.js",
     "test:perf:headed": "playwright test tests/performance/ --config=tests/performance/playwright.config.js --headed",
     "test:perf:ci": "playwright test tests/performance/ --config=tests/performance/playwright.config.js --reporter=junit",
