--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,10 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:snapshot": "jest --testNamePattern=@snapshot --verbose",
+    "test:snapshot:update": "jest --testNamePattern=@snapshot --updateSnapshot",
+    "test:snapshot:ci": "jest --testNamePattern=@snapshot --coverage=false --watchAll=false --verbose",
+    "test:snapshot:watch": "jest --testNamePattern=@snapshot --watch",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "lint:check": "eslint . --max-warnings 0",
