--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,10 @@
     "test:ci": "jest --coverage --watchAll=false",
     "test:update-snapshots": "jest --updateSnapshot",
     "test:update-snapshots:watch": "jest --updateSnapshot --watch",
+    "test:snapshot": "jest --testNamePattern=@snapshot --verbose",
+    "test:snapshot:update": "jest --testNamePattern=@snapshot --updateSnapshot",
+    "test:snapshot:ci": "jest --testNamePattern=@snapshot --coverage=false --watchAll=false --verbose",
+    "test:snapshot:watch": "jest --testNamePattern=@snapshot --watch",
     "test:e2e": "playwright test",
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:ui": "playwright test --ui",
