--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,10 +61,11 @@
     "@babel/preset-env": "^7.28.0",
     "@babel/preset-react": "^7.27.1",
     "@eslint/js": "^9.9.0",
-    "@playwright/test": "^1.48.2",
+    "@playwright/test": "^1.54.2",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/node": "^24.2.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -82,9 +83,11 @@
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
     "lighthouse": "^12.2.1",
+    "nanoid": "^5.1.5",
     "playwright": "^1.48.2",
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.10",
+    "typescript": "^5.9.2",
     "vite": "^5.4.1"
   }
 }
