--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,9 @@
     "test:snapshot:update": "jest --testNamePattern=@snapshot --updateSnapshot",
     "test:snapshot:ci": "jest --testNamePattern=@snapshot --coverage=false --watchAll=false --verbose",
     "test:snapshot:watch": "jest --testNamePattern=@snapshot --watch",
+    "test:integration": "playwright test tests/integration/ --config=tests/integration/playwright.config.js",
+    "test:integration:headed": "playwright test tests/integration/ --config=tests/integration/playwright.config.js --headed",
+    "test:integration:ci": "playwright test tests/integration/ --config=tests/integration/playwright.config.js --reporter=junit",
     "test:e2e": "playwright test",
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:ui": "playwright test --ui",
